<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/email1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/input_your_e_mail"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/input_your_password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/input_your_password_again"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/register_new_user" />
    <TextView
        android:id="@+id/loginmessage1"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/current_status" />
</LinearLayout>